feat: add Loan Factory and route
