# src/infra/tools/swagger.json
@@ -1,267 +1,144 @@
 {
-	"openapi": "3.0.0",
-	"info": {
-		"title": "Example",
-		"description": "Example description",
-		"version": "1.0.0",
-		"contact": {
-			"email": "filipedev040990@gmail.com"
-		}
-	},
-	"servers": [
-		{
-			"url": "/v1"
-		}
-	],
-	"tags": [
-		{
-			"name": "Example"
-		}
-	],
-	"paths": {
-		"/route/test": {
-			"post": {
-				"tags": [
-					"Example"
-				],
-				"operationId": "example-identifier",
-				"summary": "Example summary",
-				"description": "Description example",
-				"requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "test": {
-                    "type": "string",
-                    "example": "example",
-                    "description": "Description example."
-                  }
-                }
-              }
-            }
-          }
-        },
-				"responses": {
-					"201": {
-						"description": "Sucesso",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"id": {
-											"type": "string",
-											"example": "3b228995-20db-4558-8574-054c2e6ca0cb"
-										},
-                    "type": {
-                      "type": "string",
-                      "example": "email"
-                    },
-                    "recipient": {
-                      "type": "string",
-                      "example": "zedascouves@gmail.com"
-                    },
-                    "content": {
-                      "type": "string",
-                      "example": "Notificação de Teste"
-                    },
-                    "status": {
-                      "type": "string",
-                      "example": "waiting"
-                    },
-                    "scheduleDateHour": {
-                      "type": "string",
-                      "example": "2024-08-09 10:31:00"
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "example": "2024-08-09T13:29:18.435Z"
-                    }
-									}
-								}
-							}
-						}
-					},
-          "400": {
-            "description": "Erro de validação da solicitação",
-            "content": {
-              "application/json": {
-                "example": {
-                  "error": "MissingParamError",
-                  "message": "Missing param: type"
-                }
-              }
-            }
-          },
-					"500": {
-						"description": "Error",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "string",
-											"example": "error"
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		},
-    "/route/get/{id}": {
-      "post": {
-        "tags": [
-          "Example"
-        ],
-        "operationId": "examnple-identifier",
-        "summary": "Summary example",
-        "description": "Description Example",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "3b228995-20db-4558-8574-054c2e6ca0cb"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "string",
-                      "example": "3b228995-20db-4558-8574-054c2e6ca0cb"
-                    },
-                    "test": {
-                      "type": "string",
-                      "example": "email"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Erro de validação da solicitação",
-            "content": {
-              "application/json": {
-                "example": {
-                  "error": "InvalidParamError",
-                  "message": "Invalid param: id"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "error"
-                    }
-                  }
-                }
-              }
-            }
-          }
+    "openapi": "3.0.0",
+    "info": {
+        "title": "Loans",
+        "description": "API que lista tipos de emprestimos disponíveis",
+        "version": "1.0.0",
+        "contact": {
+            "email": "filipedev040990@gmail.com"
         }
-      }
     },
-    "/route": {
-      "get": {
-        "tags": [
-          "Example"
-        ],
-        "operationId": "get-all-example-identifier",
-        "summary": "Example",
-        "description": "Example",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "3b228995-20db-4558-8574-054c2e6ca0cb"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "oneOf": [{
-                      "type": "object",
-                      "properties": {
-                        "test": {
-                          "type": "string",
-                          "example": "3b228995-20db-4558-8574-054c2e6ca0cb"
-                        }
-                      }
-                    },{
-                      "type": "object",
-                      "properties": {
-                        "test": {
-                          "type": "string",
-                          "example": "d4a2fa1d-8428-40ca-bfa1-0326e2a97ad2"
-                        }
-                      }
-                    }]
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Erro de validação da solicitação",
-            "content": {
-              "application/json": {
-                "example": {
-                  "error": "InvalidParamError",
-                  "message": "Invalid param: id"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "error"
-                    }
-                  }
-                }
-              }
-            }
-          }
+    "servers": [
+        {
+            "url": "/v1"
         }
-      }
+    ],
+    "tags": [
+        {
+            "name": "Loans"
+        }
+    ],
+    "paths": {
+        "/route/test": {
+            "post": {
+                "tags": [
+                    "Loans"
+                ],
+                "operationId": "loans-identifier",
+                "summary": "Busca emprestimos disponíveis",
+                "description": "Busca emprestimos disponíveis de acordo com idade, renda e localização do cliente.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "age": {
+                                        "type": "number",
+                                        "example": 30,
+                                        "description": "Idade do cliente."
+                                    },
+                                    "cpf": {
+                                        "type": "string",
+                                        "example": "74125896332",
+                                        "description": "CPF do cliente."
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Joãozinho da Silva",
+                                        "description": "Nome do cliente."
+                                    },
+                                    "income": {
+                                        "type": "number",
+                                        "example": 3500,
+                                        "description": "Renda do cliente."
+                                    },
+                                    "location": {
+                                        "type": "string",
+                                        "example": "MG",
+                                        "description": "Localização do cliente."
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "customer": {
+                                            "type": "string",
+                                            "example": "Joãozinho da Silva"
+                                        },
+                                        "loans": {
+                                            "type": "array",
+                                            "items": {
+                                              "oneOf": [{
+                                                "type": "object",
+                                                "properties": {
+                                                  "loanType": {
+                                                    "type": "string",
+                                                    "example": "PERSONAL"
+                                                  },
+                                                  "interestRate": {
+                                                    "type": "number",
+                                                    "example": 4
+                                                  }
+                                                }
+                                              },{
+                                                "type": "object",
+                                                "properties": {
+                                                  "loanType": {
+                                                    "type": "string",
+                                                    "example": "GUARANTEED"
+                                                  },
+                                                  "interestRate": {
+                                                    "type": "number",
+                                                    "example": 2
+                                                  }
+                                                }
+                                              }]
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erro de validação da solicitação",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "error": "MissingParamError",
+                                    "message": "Missing param: age"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "error"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
-	}
 }
